# helium

./: .gitmodules  README.md
localization-management-api/: README.md  pyproject.toml  requirements.txt
localization-management-api/src/localization_management_api/: .env  main.py
localization-management-frontend/: package-lock.json  package.json
localization-management-frontend/app/: TranslationKeyManager.tsx  page.tsx
